--- a/JewelryPOS.App/Views/Settings/AppSettingsView.xaml
+++ b/JewelryPOS.App/Views/Settings/AppSettingsView.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <StackPanel Margin="20">
+            <TextBlock Text="Müşteri Ekranı Görseli" FontSize="18" Margin="0,0,0,10"/>
+            <Image Source="{Binding CustomerViewImagePath}" Width="200" Height="200" Margin="0,0,0,10"/>
+            <Button Content="Görsel Seç" Command="{Binding SelectImageCommand}" Width="100" Height="30"/>
+        </StackPanel>
     </Grid>
 </UserControl>
